GNOME Bugzilla – Bug 783920
panels are not restored to their proper state
Last modified: 2017-06-18 10:41:46 UTC
We store panel state for the editor panels in (org.gnome.builder.workbench, which as an aside, could be in a better place) and that is not being restored correctly when a project is loaded. They are always being displayed even when previously hidden. Patches forthcoming.
Created attachment 353976 [details] [review] perspective: add hooks to restore state These should be used to restore state like panels. It is called after the perspectives have been added and it should be relatively stable to cleanly restore settings state. By stable, I mean widgets aren't still being added.
Created attachment 353977 [details] [review] editor: implement restore_state This uses the new restore_state vfunc, and ensures that we do not animate the panels while restoring them.
Created attachment 353978 [details] [review] workbench: use restore_state api from perspectives This allows the perspectives to restore state after the common work of loading extensions should have occurred. This fixes an issue where our panels were not being shown/hidden at startup properly.
Attachment 353976 [details] pushed as 6402956 - perspective: add hooks to restore state Attachment 353977 [details] pushed as 2c993be - editor: implement restore_state Attachment 353978 [details] pushed as dbe559e - workbench: use restore_state api from perspectives