perspective: add hooks to restore state

These should be used to restore state like panels. It is called after the
perspectives have been added and it should be relatively stable to cleanly
restore settings state. By stable, I mean widgets aren't still being added.

https://bugzilla.gnome.org/show_bug.cgi?id=783920